Feat(client-dto): agregar DTOs request/response y mapper de Client