@@ -5,11 +5,10 @@ import apiTurnos.client.presentation.dto.response.ClientResponse;
 import apiTurnos.client.presentation.dto.response.ClientSimpleResponse;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class ClientMapper {
 
-    public ClientResponse toResponse(Client client){
+    public ClientResponse toResponse(Client client) {
         return ClientResponse.builder()
                 .id(client.getId())
                 .userId(client.getUserAccount().getId())
@@ -17,28 +16,36 @@ public class ClientMapper {
                 .fullName(client.getFullName())
                 .firstName(client.getUserAccount().getFirstName())
                 .lastName(client.getUserAccount().getLastName())
-                .phone(client.getUserAccount().getPhone())
+                .notes(client.getNotes())
+                .allergies(client.getAllergies())
+                .preferredBarberId(client.getPreferredBarberId())
+                .totalAppointments(client.getTotalAppointments())
+                .prefersEmailNotifications(client.getPrefersEmailNotifications())
+                .prefersSmsNotifications(client.getPrefersSmsNotifications())
+                .active(client.getActive())
                 .clientSince(client.getClientSince())
-                .userStatus(client.getUserAccount().getStatus())
+                .updatedAt(client.getUpdatedAt())
+                .userStatus(client.getUserAccount().getStatus().name())
                 .build();
     }
 
-    public ClientSimpleResponse toSimpleResponse(Client client){
+    public ClientSimpleResponse toSimpleResponse(Client client) {
         return ClientSimpleResponse.builder()
                 .id(client.getId())
                 .userId(client.getUserAccount().getId())
                 .fullName(client.getFullName())
                 .email(client.getEmail())
-                .phone(client.getUserAccount().getPhone())
+                .totalAppointments(client.getTotalAppointments())
+                .active(client.getActive())
+                .clientSince(client.getClientSince())
                 .build();
     }
 
-
-    public List<ClientResponse> toResponseList(List<Client> clientList){
-        return clientList.stream().map(this::toResponse).collect(Collectors.toList());
+    public List<ClientResponse> toResponseList(List<Client> clients) {
+        return clients.stream().map(this::toResponse).toList();
     }
 
-    public List<ClientSimpleResponse> toSimpleResponseList(List<Client> clientList){
-        return clientList.stream().map(this::toSimpleResponse).collect(Collectors.toList());
+    public List<ClientSimpleResponse> toSimpleResponseList(List<Client> clients) {
+        return clients.stream().map(this::toSimpleResponse).toList();
     }
 }
